--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "browserify -r three -r hyper3d | uglifyjs --compress --mangle > examples/js/bundle.js",
-    "build-debug": "browserify -r three -r hyper3d -d -o examples/js/bundle.js"
+    "build": "cat src/bundle-header.js > examples/js/bundle.js && browserify -r three -r hyper3d | uglifyjs --compress --mangle >> examples/js/bundle.js",
+    "build-debug": "browserify -r three -r hyper3d -d -o bundle-raw.js && cat src/bundle-header.js bundle-raw.js > examples/js/bundle.js"
   },
   "keywords": [
     "WebGL"
