--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "hyper3d": "^0.0.0",
-    "three": "^0.73.0"
+    "three": "^0.73.0",
+    "patroljs": "^0.1.0",
+    "threejs-box-hittest": "^0.0.0"
   },
   "devDependencies": {
     "browserify": "^12.0.1",
@@ -13,8 +15,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cat src/bundle-header.js > examples/js/bundle.js && browserify -r three -r hyper3d | uglifyjs --compress --mangle --screw-ie8 >> examples/js/bundle.js",
-    "build-debug": "browserify -r three -r hyper3d -d -o bundle-raw.js && cat src/bundle-header.js bundle-raw.js > examples/js/bundle.js"
+    "build": "cat src/bundle-header.js > examples/js/bundle.js && browserify -r patroljs -r three -r hyper3d | uglifyjs --compress --mangle --screw-ie8 >> examples/js/bundle.js",
+    "build-debug": "browserify -r patroljs -r three -r hyper3d -d -o bundle-raw.js && cat src/bundle-header.js bundle-raw.js > examples/js/bundle.js"
   },
   "keywords": [
     "WebGL"
