--- a/package.json
+++ b/package.json
@@ -10,13 +10,27 @@
     "threejs-geometry-hittest": "^0.0.3"
   },
   "devDependencies": {
+    "aliasify": "^1.8.0",
     "browserify": "^12.0.1",
-    "uglify-js": "^2.6.1"
+    "browserify-global-shim": "^1.0.0",
+    "coffee-script": "^1.10.0",
+    "del": "^2.2.0",
+    "event-stream": "^3.3.2",
+    "gulp": "^3.9.0",
+    "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
+    "gulp-webserver": "^0.9.1",
+    "licensify": "^2.0.1",
+    "path": "^0.12.7",
+    "uglify-js": "^2.6.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cat src/bundle-header.js > examples/js/bundle.js && browserify -r patroljs -r threejs-geometry-hittest -r three -r hyper3d | uglifyjs --compress --mangle --screw-ie8 >> examples/js/bundle.js",
-    "build-debug": "browserify -r patroljs -r threejs-geometry-hittest -r three -r hyper3d -d -o bundle-raw.js && cat src/bundle-header.js bundle-raw.js > examples/js/bundle.js"
+    "build": "gulp build --mode release",
+    "build-debug": "gulp build --mode debug",
+    "server": "gulp server --mode debug"
   },
   "keywords": [
     "WebGL"
