--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "event-stream": "^3.3.2",
     "gulp": "^3.9.0",
     "gulp-gzip": "^1.2.0",
+    "gulp-shell": "^0.5.1",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
     "gulp-webserver": "^0.9.1",
