--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -1,8 +1,11 @@
 - title: "simple"
   href: "/simple"
+
 - title: "simple2"
   href: "/simple2"
+
 - title: "materials"
   href: "/materials"
-- title: "game/fps"
-  href: "/game_fps"
+
+#- title: "game/fps"
+#  href: "/game_fps"
