updated github link

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: Hyper3D
 description: High-end rendering engine for three.js
 author:
   name: Hyper3D Developers
-  github: Hyper3D
+  github: Hyper3D/hyper3d
   bio: High-end rendering engine for three.js
 
 role: examples
